--- a/assets/css/agenda.css
+++ b/assets/css/agenda.css
@@ -404,15 +404,23 @@ body {
   }
 
   .agenda-close {
-    font-size: 1.5rem;
-    font-weight: normal;
+    background-color: #345291;
+    color: white;
+    border: none;
+    width: 32px;
+    height: 32px;
+    border-radius: 6px;
+    font-size: 1.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-    color: #666;
-    line-height: 1;
+    padding: 0;
+    transition: background-color 0.2s;
   }
 
   .agenda-close:hover {
-    color: #333;
+    background-color: #2a406e;
   }
 
   /* Estilos de formulario */
